# Tetris-Multiplayer-RL

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  DEPLOY.md  DOCUMENTATION.md  GUIDE.md  MATCHMAKING.md  MULTIPLAYER_SETUP.md  Makefile  README.md  TECHNICAL_DEEP_DIVE.md  pyproject.toml
.claude/: settings.local.json
SimpleTest/: .SimpleEnv.cpp.un~  .env_test.py.un~  .setup.py.un~  SimpleEnv.cpp  env_test.py  setup.py
assets/: images.cfg
audio/: audio.cpp  audio.h  sdl_audio.cpp
bindings/: tetris_py.cpp
bot/: bot_onnx.cpp  bot_onnx.h  placement.cpp  placement.h
core/: constants.h  hash.h  input.h  replay.cpp  replay.h  rng.h
deploy/: Caddyfile.example
deploy/cloudflared/: config.yml.example
deploy/systemd/: tetris-meta.env.example  tetris-meta.service  tetris-relay.env.example  tetris-relay.service
docs/: FRAMING.md  FRAMING_PROTOCOL.md  HUD.md  NETWORK.md  NETWORKING_OVERVIEW.md  SESSION.md  SESSION_LAYER.md  SOCKET_LAYER.md
docs/blog/: README.md  _style_guide.md  part0-project-setup.md  part1-deterministic-simulation.md  part1-window-and-opengl.md  part10-meta-and-ranking.md  part11-settings-and-options.md  part12-hardening-and-release.md  part2-2d-rendering.md  part2-platform-window-input.md  part3-rendering-and-ui.md  part3-tetris-logic.md  part4-game-loop.md  part4-game-wrapper-and-loop.md  part5-audio.md  part5-lockstep-networking.md  part6-lockstep-networking.md  part6-python-rl.md  part7-relay-server.md  part7-xaudio2-audio.md  part8-python-rl.md  part8-relay-server.md  part9-rl-onnx-bot.md
include/: ai_bot.h  ai_player.h  block.h  client.h  game.h  game_mode.h  grid.h  network_protocol.h  player.h  position.h  python_interop.h  server.h
meta/: api_server.cpp  api_server.h  database.cpp  database.h  elo.h  http_client.cpp  http_client.h  levels.h  main.cpp  protocol.h
model/: bots.cfg.example
model/bots/: README.md
net/: framing.cpp  framing.h  session.cpp  session.h  socket.cpp  socket.h
platform/: gl_defs.h  platform.h  sdl.cpp  win32.cpp
platform/macos/: Info.plist.in
python/: block.py  blocks.py  grid.py  main.py  position.py  requirements-colab.txt  requirements.txt
python/common/: __init__.py  action_mask.py  checkpoint.py  env.py  env_versus.py  features.py  models.py  obs.py
python/legacy/: README.md
python/netbot/: __init__.py  client.py  export_onnx.py  framing.py  input_expander.py  policy_runner.py  session.py
python/sim/: README.md  __init__.py
python/tests/: _sim_hash_dump.txt  conftest.py  test_checkpoint_roundtrip.py  test_determinism_crossplatform.py  test_framing_parity.py  test_match_summary_crosscheck.py  test_meta_db_smoke.py  test_placement_parity.py  test_relay_meta_smoke.py  test_relay_smoke.py  test_room_smoke.py  test_training_scripts_static.py  test_versus_env.py
python/train/: README_colab.md  cbmpi_tetris.py  cem_tetris.py  dqn_tetris.py  muzero_tetris.py  policy_gradient_tetris.py  ppo_tetris.py  rl_common.py  setup_colab.ipynb  train_model_zoo_colab.ipynb  train_ppo_colab.ipynb
renderer/: image.cpp  image.h  renderer.cpp  renderer.h  shaders.h  shake.cpp  shake.h  software_internal.h  text_software.cpp  text_stb.cpp  text_win32.cpp
scripts/: backup_meta_db.sh  release_linux.sh  release_macos.sh  release_server_linux.sh  release_win.ps1
server/: main.cpp  matchmaker.cpp  matchmaker.h  player_conn.cpp  player_conn.h  relay.cpp  relay.h  room.cpp  room.h  worker_group.h
src/: ai_bot.cpp  block.cpp  block.h  client.cpp  colors.cpp  colors.h  game.cpp  game.h  game_mode.cpp  grid.cpp  grid.h  gui.cpp  gui.h  main.cpp  main_client.cpp  main_server.cpp  player.cpp  python_interop.cpp  server.cpp  sim_block.h  sim_blocks.h  sim_game.cpp  sim_game.h  sim_grid.h
src/game/: ai_bot.cpp  ai_player.cpp  block.cpp  game.cpp  network_protocol.cpp
src/ncurses/: a.out  block.cpp  block.h  game.cpp
src/raylib/: env_check.h
tests/: sim_hash_dump.cpp  worker_group_test.cpp
web/ranking/: index.html
