[project]
name = "tetris-multiplayer-rl"
version = "0.1.0"
description = "C++ multiplayer Tetris client/server with Python RL tooling."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
train = [
    "gymnasium>=0.29",
    "torch>=2.1",
]
export = [
    "onnx>=1.14",
    "torch>=2.1",
]

[dependency-groups]
dev = [
    "pytest>=7.4",
    "pybind11>=2.11",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["python/tests"]
pythonpath = ["python"]
